edition = "2023";

package otterscale.model.v1;

import "api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/otterscale/otterscale/api/model/v1;pb";

service ModelService {
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option (otterscale.api.feature) = {
      name: "mdl-general"
    };
  };

  rpc GetModel(GetModelRequest) returns (Model) {
    option (otterscale.api.feature) = {
      name: "mdl-general"
    };
  };

  rpc CreateModel(CreateModelRequest) returns (Model) {
    option (otterscale.api.feature) = {
      name: "mdl-general"
    };
  };

  rpc DeleteModel(DeleteModelRequest) returns (google.protobuf.Empty) {
    option (otterscale.api.feature) = {
      name: "mdl-general"
    };
  };
}

message Model {
  string id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
  string comment = 5;
}

message ListModelsRequest {
  string scope = 1;
  string facility = 2;
}

message ListModelsResponse {
  repeated Model models = 1;
}

message GetModelRequest {
  string id = 1;
}

message CreateModelRequest {
  string name = 1;
  string description = 2;
  string version = 3;
  string comment = 4;
}

message DeleteModelRequest {
  string id = 1;
}
